@@ -1,3 +1,9 @@
+2006-03-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/drawingarea/clock/clock.cc:
+	* examples/book/drawingarea/joins/myarea.cc: Update the cairomm enum values for the 
+	latest cairomm API.
+
 2006-03-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/combobox.hg: Added get/set_title() and corresponding
